--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/colors.scss";
 
 .t-sidebar {
-  padding: 32px 40px 30px 80px;
+  padding: 32px 40px 30px 0;
   border-right: 1px solid $color-extra-light-gray;
   height: 100vh;
   width: 200px;
