--- a/src/app/modules/post-timeline/components/add-post/add-post.component.scss
+++ b/src/app/modules/post-timeline/components/add-post/add-post.component.scss
@@ -11,6 +11,12 @@
     > .icons {
       display: flex;
       gap: 24px;
+      flex: 1;
+    }
+
+    > .limit {
+      color: $color-dark-gray;
+      margin-right: 24px;
     }
   }
 }
