--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,8 @@
-<button class="t-button" [ngClass]="type" (click)="handleClickEvent()">
+<button
+  class="t-button"
+  [ngClass]="type"
+  (click)="handleClickEvent()"
+  [attr.disabled]="disabled ? true : null"
+>
   {{ label }}
 </button>
