--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -19,4 +19,10 @@
     color: $color-primary;
     background: transparent;
   }
+
+  &:disabled,
+  &[disabled] {
+    opacity: 0.5;
+    cursor: initial;
+  }
 }
