--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,19 +1,28 @@
 @import "../../../styles/colors.scss";
+@import "../../../styles/breakpoints.scss";
 
 .t-sidebar {
-  padding: 32px 40px 30px 0;
+  padding: 32px;
   border-right: 1px solid $color-extra-light-gray;
   height: 100vh;
-  width: 200px;
   font-size: 19px;
 
+  @include lg {
+    width: 200px;
+    padding: 32px 40px 30px 0;
+  }
+
   > .t-menu {
-    display: grid;
-    gap: 24px;
+    display: none;
     margin: 0;
     margin-top: 32px;
     padding: 0;
     list-style: none;
+
+    @include lg {
+      display: grid;
+      gap: 24px;
+    }
 
     > .t-menu-item {
       display: flex;
